# awesome-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  project-structure  pyproject.toml  railway.toml  run.sh
src/awesome_updater/: main.py
src/awesome_updater/core/: awesome_gpt_service.py  content_fetcher.py  content_merger.py  git_manager.py  github_client.py  gpt_service.py
src/models/: content_types.py
src/news_poster/: __init__.py  main.py  news_poster.py
src/utils/: gpt_service.py
tools/: .env.example  README.md  pyproject.toml
tools/config/: config.yaml
tools/src/: main.py  post_news.py
tools/src/core/: content_fetcher.py  content_merger.py  git_manager.py  github_client.py  gpt_service.py  news_poster.py
tools/src/utils/: config.py  logger.py
