[tool.poetry]
name = "awesome-tools"
version = "0.1.0"
description = "Tools for maintaining the Awesome Embodied AI list"
authors = ["Dustland Team"]
readme = "README.md"
repository = "https://github.com/dustland/awesome-tools"
packages = [{include = "utils", from = "src"},
           {include = "models", from = "src"},
           {include = "awesome_updater", from = "src"},
           {include = "news_poster", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
gitpython = "^3.1.42"
typing-extensions = "^4.9.0"
loguru = "^0.7.2"
openai = "^1.59.7"
arxiv = "^2.1.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
tavily-python = "^0.3.1"
pytz = "^2024.1"
gunicorn = "^21.2.0"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
awesome_updater = "awesome_updater.main:main"
news_poster = "news_poster.main:main"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"